made changes to deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           mkdir deploy
           cp -r backend/* deploy/
-          cp requirements.txt deploy/
+          cp backend/requirements.txt deploy/
 
       - name: Zip for deployment
         run: |
