--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ AZURE_OPENAI_API_VERSION=2024-12-01-preview
 AZURE_OPENAI_MODEL=gpt-4.1_first_model
 
 REVIEW_ENDPOINT=https://your-server.com/review
+example
