Update deployment workflow to install requirements
Install Python dependencies in deployment folder.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           mkdir deploy
           cp -r backend/* deploy/
-          cp backend/requirements.txt deploy/
+          pip install --target deploy/.python_packages/lib/site-packages -r backend/requirements.txt
 
       - name: Zip for deployment
         run: |
