Update code review workflow to use correct GITHUB_TOKEN secret

--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Trigger code review
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
           REVIEW_ENDPOINT: ${{ secrets.REVIEW_ENDPOINT }}
         run: |
           # Get PR details
