feat: Add `requirements.txt` and update `deploy.yml` to copy all backend files and remove inline dependency installation.

--- a/deploy.yml
+++ b/deploy.yml
@@ -21,8 +21,7 @@ jobs:
       - name: Create deployment folder
         run: |
           mkdir deploy
-          cp -r backend/* deploy/
-          pip install --target deploy/.python_packages/lib/site-packages -r backend/requirements.txt
+          cp -r backend/. deploy/
 
       - name: Zip for deployment
         run: |
